force-app/main/default/objects/User/fields/dfsle__Username__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Username__c</fullName>
    <description>DocuSign username</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DocuSign username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>