force-app/main/default/objects/User/fields/QIDC__MDM_Available_Countries_ims__c.field-meta.xml
<CustomField>
    <fullName>QIDC__MDM_Available_Countries_ims__c</fullName>
    <label>MDM Available Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>