force-app/main/default/objects/User/fields/QIDC__MDM_Preferred_Country_ims__c.field-meta.xml
<CustomField>
    <fullName>QIDC__MDM_Preferred_Country_ims__c</fullName>
    <label>MDM Preferred Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>