force-app/main/default/objects/User/fields/QIDC__OK_Available_Countries_ims__c.field-meta.xml
<CustomField>
    <fullName>QIDC__OK_Available_Countries_ims__c</fullName>
    <label>OneKey Available Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>