force-app/main/default/objects/User/fields/QIDC__OK_Preferred_Country_ims__c.field-meta.xml
<CustomField>
    <fullName>QIDC__OK_Preferred_Country_ims__c</fullName>
    <label>OneKey Preferred Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>