force-app/main/default/objects/User/fields/QIDC__OOC_Profile_Downloads__c.field-meta.xml
<CustomField>
    <fullName>QIDC__OOC_Profile_Downloads__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OOC Profile Downloads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>