force-app/main/default/objects/User/fields/QIDC__OrgManagerId_IMS__c.field-meta.xml
<CustomField>
    <fullName>QIDC__OrgManagerId_IMS__c</fullName>
    <description>Org Manager Id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Org Manager Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>