force-app/main/default/objects/User/validationRules/QIDC__MDM_Preferred_Country_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>QIDC__MDM_Preferred_Country_Mandatory</fullName>
    <active>false</active>
    <description>MDM Preferred Country Mandatory</description>
    <errorConditionFormula>AND(
  ISBLANK( TEXT(QIDC__MDM_Preferred_Country_ims__c))
, ISPICKVAL(Profile.UserType,&apos;Standard&apos;)
)</errorConditionFormula>
    <errorDisplayField>QIDC__MDM_Preferred_Country_ims__c</errorDisplayField>
    <errorMessage>Field cannot be blank.</errorMessage>
</ValidationRule>