force-app/main/default/objects/User/validationRules/QIDC__OK_MDM_Preferred_Countries_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>QIDC__OK_MDM_Preferred_Countries_Mandatory</fullName>
    <active>false</active>
    <description>Both OneKey Preferred Country and MDM Preferred Country fields are mandatory</description>
    <errorConditionFormula>AND(
 OR(
 ISBLANK( TEXT( QIDC__OK_Preferred_Country_ims__c ) )
 , ISBLANK( TEXT( QIDC__MDM_Preferred_Country_ims__c ) )
 ) 
 , ISPICKVAL( Profile.UserType,&apos;Standard&apos; )
)</errorConditionFormula>
    <errorMessage>Both OneKey Preferred Country and MDM Preferred Country cannot be blank.</errorMessage>
</ValidationRule>